--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -86,6 +86,9 @@
 
 <script type="text/tmpl" id="element_template_form">
      
+     <div id="dialogs_container">
+     </div> 
+
      <div class="element-detail all-border-solid-light overflow bottom-margin-1line">
 
         <div class="grid_5">
@@ -339,5 +342,6 @@
 
 </script>
 
+<%= partial :booking_management_edit %>
 <%= element_form_extension %>
 <%= element_action_extension %>
