--- a/views/_reservation_activity_cyclic.js.erb
+++ b/views/_reservation_activity_cyclic.js.erb
@@ -1,6 +1,6 @@
 require(["jquery",'ysdtemplate', "YSDMemoryDataSource", "YSDSelectSelector", "jquery.ui", 'jquery.validate', 
            'jquery.placeholder', 'jquery.ui', 'jquery.ui.datepicker-es', 
-           'jquery.ui.datepicker.validation',
+           'jquery.ui.datepicker.validation', 'jquery.validate',
            'jquery.tools', 'jquery.formparams', 'datejs'],
          function($, tmpl, MemoryDataSource, SelectSelector) {
     cyclicModel = {
@@ -8,7 +8,6 @@ require(["jquery",'ysdtemplate', "YSDMemoryDataSource", "YSDSelectSelector", "jq
        turn: null,
        dateLiteral: null,
        total: 0,
-       capacity: <%=@activity.capacity%>,
        all_days_same_turns: <%=@activity.all_days_same_turns%>,
        season_prices: <%=@activity.season_prices?%>,
        morning_turns: '<%=@activity.morning_turns%>',
@@ -35,37 +34,9 @@ require(["jquery",'ysdtemplate', "YSDMemoryDataSource", "YSDSelectSelector", "jq
        saturday_morning_turns: '<%=@activity.saturday_morning_turns%>',
        saturday_afternoon_turns: '<%=@activity.saturday_afternoon_turns%>',
        saturday_night_turns: '<%=@activity.saturday_night_turns%>',
-       price_1_defined : <%=!@activity.price_definition_1.nil?%>,
-       price_1_description: '<%=@activity.price_1_description%>',
-       price_2_defined : <%=!@activity.price_definition_2.nil?%>,
-       price_2_description: '<%=@activity.price_2_description%>',
-       price_3_defined: <%=!@activity.price_definition_3.nil?%>,
-       price_3_description: '<%=@activity.price_3_description%>',
        morningTurns: [],
        afternoonTurns: [],
        nightTurns: [],
-       <% rates = @activity.rates(Date.today) %>
-       prices_1 : {
-         <% unless @activity.price_definition_1.nil? %>
-            <% rates[1].each do |quantity, price| %>
-              '<%=quantity%>':<%="%.2f" % price%>, 
-            <% end %>
-         <% end %>
-       },
-       prices_2 : {
-         <% unless @activity.price_definition_2.nil? %>
-            <% rates[2].each do |quantity, price| %>
-              '<%=quantity%>':<%="%.2f" % price%>,  
-            <% end %>
-         <% end %>
-       },
-       prices_3 : {
-         <% unless @activity.price_definition_3.nil? %>
-            <% rates[3].each do |quantity, price| %>
-              '<%=quantity%>':<%="%.2f" % price%>,
-            <% end %>  
-         <% end %>
-       },
        buildTurns: function() {
            this.total = 0;
            this.date = $('#datepicker').datepicker("getDate").toString('yyyy-MM-dd');
@@ -77,7 +48,7 @@ require(["jquery",'ysdtemplate', "YSDMemoryDataSource", "YSDSelectSelector", "jq
              _nightTurns = this.night_turns;
            }
            else {
-             var dayOfWeek = Date.parse(this.date,'yyyy-MM-dd').getDay();
+             var dayOfWeek = new Date(this.date).getDay();
              switch (dayOfWeek) {
                 case 0:
                   _morningTurns = this.sunday_morning_turns;
@@ -124,29 +95,38 @@ require(["jquery",'ysdtemplate', "YSDMemoryDataSource", "YSDSelectSelector", "jq
           cyclicView.updatePrice();
           cyclicView.updateDate();
           cyclicView.updateTurns();
-          cyclicView.loadCapacity();
        },
        calculatePrice: function() {
           this.total = 0;
-          if (this.prices_1[$('#quantity_rate_1').val()]) {
-            this.total += this.prices_1[$('#quantity_rate_1').val()];
+          if ($('#quantity_rate_1 option:selected').attr('data-total') != undefined) {
+            this.total += new Number($('#quantity_rate_1 option:selected').attr('data-total'));
           }
-          if (this.prices_2[$('#quantity_rate_2').val()]) {
-            this.total += this.prices_2[$('#quantity_rate_2').val()];
+          if ($('#quantity_rate_2 option:selected').attr('data-total') != undefined) {
+            this.total += new Number($('#quantity_rate_2 option:selected').attr('data-total'));
           }
-          if (this.prices_3[$('#quantity_rate_3').val()]) {
-            this.total += this.prices_1[$('#quantity_rate_3').val()];
-          }          
+          if ($('#quantity_rate_3 option:selected').attr('data-total') != undefined) {
+            this.total += new Number($('#quantity_rate_3 option:selected').attr('data-total'));
+          }               
           cyclicView.updatePrice();
        }                                  
     };
 
     cyclicController = {
-        onDateChanged: function() {
-            cyclicModel.buildTurns();
+        onDateChanged: function(control) {
+            control.form.submit();
+        },
+        onTurnChanged: function(control) {
+            control.form.submit();
         },
         onQuantityChanged: function() {
             cyclicModel.calculatePrice();
+        },
+        onActivityFormSubmited: function() {
+          if (cyclicModel.total == 0) {
+            alert('<%=t.activity.no_ticket_selected%>');
+            return false;
+          }
+          return true;
         }
     };
 
@@ -157,34 +137,43 @@ require(["jquery",'ysdtemplate', "YSDMemoryDataSource", "YSDSelectSelector", "jq
               minDate: new Date(),
               beforeShowDay: function(date){
                 // Make sure invalidates not available dates
+                /*
                 if (date.getDate() == 14) {
                     return [false];
                 }
+                */
                 return [true];
               }
             });
+            $('#datepicker').datepicker('setDate', <%if defined?@date and !@date.nil?%>new Date("<%=@date%>")<%else%>new Date()<%end%>);
             $('#datepicker').bind('change', function() {
-               cyclicController.onDateChanged();
+               var date = $('#datepicker').datepicker("getDate").toString('yyyy-MM-dd');
+               $('#select_date').val(date);              
+               cyclicController.onDateChanged($('#select_date')[0]);
             });  
             $('.quantity_rate').bind('change', function() {
                cyclicController.onQuantityChanged();
             });
-            cyclicModel.buildTurns();
-            this.loadCapacity();
+            $('form[name=activity_form]').bind('submit', function() {
+               return cyclicController.onActivityFormSubmited();
+            });             
+            cyclicModel.buildTurns();  
         },
 
         updateDate: function() {
           $('#date_text').html(cyclicModel.dateLiteral);
-          $('#date').val(cyclicModel.date);
+          $('#select_date').val(cyclicModel.date);
         },
 
         updatePrice: function() {
            $('#total').html(cyclicModel.total.toFixed(2) + '€');
            if (cyclicModel.total > 0) {
              $('#total').show();
+             $('#botonera').show();
            }
            else {
              $('#total').hide();
+             $('#botonera').hide();
            }
         },
 
@@ -205,86 +194,19 @@ require(["jquery",'ysdtemplate', "YSDMemoryDataSource", "YSDSelectSelector", "jq
            }
 
            $('#turns').html(html);
+           
+           $('form[name=select_date_form] input[name=date]').bind('change', function(e) {
+              cyclicController.onDateChanged($(this)[0]);
+           });
 
-        },
+           $('input[name=turn]').bind('change', function(e) {
+              cyclicController.onTurnChanged($(this)[0]);
+           });   
 
-        loadCapacity: function() {
-          
-          if (cyclicModel.morningTurns.length > 0 ||
-              cyclicModel.afternoonTurns.length > 0 || 
-              cyclicModel.nightTurns.length > 0) {
-            
-            // Price 1
-            if (cyclicModel.price_1_defined) {
-              var capacities = [];
-              capacities.push({id:0,
-                               description: '0 X ' + cyclicModel.price_1_description});
-              for (idx=1;idx <=cyclicModel.capacity; idx++) {
-                capacities.push({id:idx,
-                                 description:this.format(idx,cyclicModel.price_1_description,
-                                                    cyclicModel.prices_1[idx])});
-              }           
-              var capacitiesDataSource = new MemoryDataSource(capacities);
-              var capacitiesSelectSelector = new SelectSelector('quantity_rate_1', capacitiesDataSource);
-              $('#quantity_rate_1').show();
-            }
-            else {
-              $('#quantity_rate_1').hide();
-            }
-            // Price 2
-            if (cyclicModel.price_2_defined) {
-              var capacities = [];
-              capacities.push({id:0,
-                               description: '0 X ' + cyclicModel.price_2_description});              
-              for (idx=1;idx <=cyclicModel.capacity; idx++) {
-                capacities.push({id:idx,
-                                 description:this.format(idx,cyclicModel.price_2_description,
-                                                    cyclicModel.prices_2[idx])});
-              }           
-              var capacitiesDataSource = new MemoryDataSource(capacities);
-              var capacitiesSelectSelector = new SelectSelector('quantity_rate_2', capacitiesDataSource);
-              $('#quantity_rate_2').show();
-            }
-            else {
-              $('#quantity_rate_2').hide();
-            }
-            // Price 3
-            if (cyclicModel.price_3_defined) {
-              var capacities = [];
-              capacities.push({id:0,
-                               description: '0 X ' + cyclicModel.price_3_description});              
-              for (idx=1;idx <=cyclicModel.capacity; idx++) {
-                capacities.push({id:idx,
-                                 description:this.format(idx,cyclicModel.price_3_description,
-                                                    cyclicModel.prices_3[idx])});
-              }           
-              var capacitiesDataSource = new MemoryDataSource(capacities);
-              var capacitiesSelectSelector = new SelectSelector('quantity_rate_3', capacitiesDataSource);
-              $('#quantity_rate_3').show();
-            }
-            else {
-              $('#quantity_rate_3').hide();
-            }
+           <% if defined?@time and !@time.nil? %>
+             $('form[name=select_date_form] input[name=turn][value="<%=@time%>"]').prop('checked', true);
+           <% end %>
 
-            $('#tickets').show();
-          }
-          else {
-            $('#tickets').hide();
-          }
-
-        },
-
-        format: function(quantity, priceDescription, price) {
-           var extraSpaceIdx = (quantity < 10) ? ' ' : '';
-           var extraSpacePrice = '';
-           var max = 15 - price.toString().length;
-           for (var idx=0; idx < max; idx++) {
-             extraSpacePrice += ' ';
-           }
-
-           var value = quantity + extraSpaceIdx + ' X ' + priceDescription + extraSpacePrice +
-                       price.toFixed(2) + '€';
-           return value;
         }
     };
 
