--- a/views/reservation_activities.erb
+++ b/views/reservation_activities.erb
@@ -1,9 +1,9 @@
 <style>
   body {
-    background-color: #DDD;
+    /*background-color: #DDD;*/
   }
   .activity_list_item {
-  	background-color: white;
+  	/*background-color: white;*/
   	margin-bottom: 1em;
   	margin-top: 1em;
   	padding-bottom: 2em;
@@ -12,10 +12,7 @@
   }
 </style>
 <div class="container_12">
-	<div class="grid_3">
-	  <span>&nbsp;</span>
-	</div>
-	<div class="grid_9">
+	<div class="grid_12">
 	  <% @activities.each do |activity| %>
 	  <div class="activity_list_item top-margin bottom-margin">
 	    <div class="container_12">
@@ -33,7 +30,7 @@
           <div class="grid_9">
           	<div class="left-margin">
           	  <h4><a href="/p/activity/<%=activity.id%>"><%=activity.name%></a></h4>
-          	  <div><%=activity.short_description%></div>
+          	  <div class="less_contrast_text"><%=activity.short_description%></div>
           	  <div class="container top-margin-1line">
           	  	<div class="prefix_6 grid_3">
           	       <p style="font-size:0.5em">desde <span style="text-decoration:line-through;"><%= activity.from_price != activity.from_price_offer ? "%.2f €" % activity.from_price : "" %></span></p>
